--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body{
+    position: relative;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    
 }
 .table{
     position: relative;
@@ -9,16 +14,27 @@ body{
     box-shadow: 10px 15px 18px rgba(0, 0, 0, 0.1); 
 }
 .lineas {
-   position: absolute; /* Establece la posición absoluta */
+   position: absolute; 
     background-color: black;
 }
 
 .lineasx {
-    width: 100%; /* Ocupa todo el ancho */
+    width: 100%; 
     height: 3px;
 }
 
 .lineasy {
     width: 3px;
-    height: 100%; /* Ocupa toda la altura */
+    height: 100%; 
+}
+.boton{
+    height: 20px;
+    margin: 28px;
+    background-color: blueviolet;
+    text-align: center;
+}
+.fichas{
+    
+    background-color: red;
+    border-radius: 50%;
 }
