--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ body{
     width: 700px;
     box-shadow: 10px 15px 18px rgba(0, 0, 0, 0.1); 
 }
+.papelitos{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
 
 .lineas {
    position: absolute; 
