--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body{
 .boton{
     height: 20px;
     margin: 28px;
+    margin-bottom: 10px;
     background-color: blueviolet;
     text-align: center;
 }
